--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,14 @@ body {
     margin-left: 1em;
 }
 
+.no-margin-left {
+    margin-left: 0;
+}
+
+.no-margin-right {
+    margin-right:  0;
+}
+
 
 
 .text-left {
